--- a/style.css
+++ b/style.css
@@ -30,10 +30,13 @@ body {
   border-left: 1px solid black;
 }
 button {
-  background-color: hsl(0, 0%, 59%);
+  background-color: hsl(0, 0%, 17%);
+  color: #fff;
+  border: 2px solid hsl(0, 0%, 17%);
   outline: 0;
   position: relative;
   margin-left: -2rem;
+  cursor: pointer;
   padding: 1rem 1rem;
   border-radius: 0 15px 15px 0;
 }
@@ -57,10 +60,22 @@ input {
 }
 .background {
   height: 40vh;
-  background-image: url("images/pattern-bg.png");
+  background-image: url(images/pattern-bg.png);
   object-fit: cover;
 }
 #map {
   height: 60vh;
   z-index: 1;
+}
+@media (max-width: 740px) {
+  .ip-details {
+    flex-direction: column;
+    text-align: center;
+    transform: translateY(50%);
+    transform: scale(0.8);
+  }
+  .box + .box {
+    margin: 0.4rem 0;
+    border: 0;
+  }
 }
